--- a/ranking_and_correlation.ipynb
+++ b/ranking_and_correlation.ipynb
@@ -100,16 +100,11 @@
     {
      "data": {
       "text/plain": [
-       "{'xmv_10': [2, 2, 1, 1],\n",
-       " 'xmv_11': [9, 6, 5, 7],\n",
-       " 'xmeas_19': [4, 10, 9, 8],\n",
-       " 'xmeas_21': [1, 3, 2, 4],\n",
-       " 'xmv_9': [6, 9, 7, 9],\n",
-       " 'xmv_4': [8, 4, 10, 10],\n",
-       " 'xmv_5': [3, 5, 3, 3],\n",
-       " 'xmeas_17': [7, 7, 4, 5],\n",
-       " 'xmeas_18': [10, 8, 6, 6],\n",
-       " 'xmeas_9': [5, 1, 8, 2]}"
+       "{'<BattSoc>': [2, 2, 1, 1],\n",
+       " '<BattV>': [5, 4, 5, 5],\n",
+       " '<xdot>': [4, 5, 3, 2],\n",
+       " '<Cltch2State>': [1, 3, 2, 4],\n",
+       " '<ThrPosPct>': [3, 1, 4, 3]}"
       ]
      },
      "execution_count": 26,
